--- a/0-Data-Modeling/Projects/sparkify-data-etl/requirements.txt
+++ b/0-Data-Modeling/Projects/sparkify-data-etl/requirements.txt
@@ -9,6 +9,7 @@ importlib-metadata==1.4.0
 ipykernel==5.1.3
 ipython==7.11.1
 ipython-genutils==0.2.0
+ipython-sql==0.3.9
 ipywidgets==7.5.1
 jedi==0.15.2
 Jinja2==2.10.3
@@ -29,6 +30,7 @@ pandocfilters==1.4.2
 parso==0.5.2
 pexpect==4.8.0
 pickleshare==0.7.5
+prettytable==0.7.2
 prometheus-client==0.7.1
 prompt-toolkit==3.0.2
 psycopg2==2.8.4
@@ -41,6 +43,8 @@ pyzmq==18.1.1
 qtconsole==4.6.0
 Send2Trash==1.5.0
 six==1.14.0
+SQLAlchemy==1.3.13
+sqlparse==0.3.0
 terminado==0.8.3
 testpath==0.4.4
 tornado==6.0.3
